Created basic GUI whit buttons

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Rock, Paper, Scissors!</title>
-        <script src="script.js"></script>    
+ 
      </head>
-    <body>
+<body>
+<button id="rock">Piedra</button>
+<button id="paper">Papel</button>
+<button id="scissors">tijera</button>
+</body>
+<script src="script.js"></script>   
 
-    </body>
 </html>
