--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
  
      </head>
 <body>
+    <div id="results">
+        <p>Player: 0    Computer: 0</p>
+    </div>
+    <div id="gameContainer">
 <button id="rock">Piedra</button>
 <button id="paper">Papel</button>
 <button id="scissors">tijera</button>
+</div>
 </body>
 <script src="script.js"></script>   
 
